2005-08-24  Mark Wielaard  <mark@klomp.org>

	* vm/reference/gnu/classpath/jdwp/VMFrame.java: Update copyright
	boilerplate address.
	* vm/reference/gnu/classpath/jdwp/VMIdManager.java: Likewise.

2005-08-24  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/newsitems.txt: Fix announcement url.

2005-08-24  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalIconFactory.java
	(InternalFrameCloseIcon): new private class,
	(InternalFrameAltMaximizeIcon): likewise,
	(InternalFrameMaximizeIcon): likewise,
	(InternalFrameMinimizeIcon): likewise,
	(getInternalFrameCloseIcon): implemented,
	(getInternalFrameMaximizeIcon): implemented,
	(getInternalFrameMinimizeIcon): implemented,
	(getInternalFrameAltMaximizeIcon): implemented.

2005-08-24  Mark Wielaard  <mark@klomp.org>

	* gnu/CORBA/ForwardRequestHelper.java: Update copyright boilerplate
	address.
	* gnu/classpath/jdwp/processor/CommandSet.java: Likewise.
	* gnu/classpath/jdwp/processor/StringReferenceCommandSet.java:
	Likewise.
	* gnu/classpath/jdwp/processor/ClassLoaderReferenceCommandSet.java:
	Likewise.
	* gnu/classpath/jdwp/processor/ClassTypeCommandSet.java: Likewise.
	* gnu/classpath/jdwp/processor/StackFrameCommandSet.java: Likewise.
	* gnu/classpath/jdwp/processor/ThreadReferenceCommandSet.java:
	Likewise.
	* gnu/classpath/jdwp/util/LineTable.java: Likewise.
	* gnu/classpath/jdwp/util/MethodResult.java: Likewise.
	* gnu/classpath/jdwp/util/VariableTable.java: Likewise.
	* javax/xml/namespace/QName.java: Likewise.
	* org/omg/DynamicAny/_DynAnyFactoryStub.java: Likewise.
	* org/omg/DynamicAny/_DynAnyStub.java: Likewise.
	* org/omg/DynamicAny/_DynArrayStub.java: Likewise.
	* org/omg/DynamicAny/_DynEnumStub.java: Likewise.
	* org/omg/DynamicAny/_DynFixedStub.java: Likewise.
	* org/omg/DynamicAny/_DynSequenceStub.java: Likewise.
	* org/omg/DynamicAny/_DynStructStub.java: Likewise.
	* org/omg/DynamicAny/_DynUnionStub.java: Likewise.
	* org/omg/DynamicAny/_DynValueStub.java: Likewise.